<resources>
	<string name="app_name">跨房间连麦</string>
	<string name="ttt_splash_versioninfo">http://www.3ttech.cn version %1$s</string>
	<string name="main_audioup">A-%1$skbps\u2191</string>
	<string name="main_videoups">V-%1$skbps\u2191</string>
	<string name="videoly_videodown">V-%1$skbps\u2193</string>
	<string name="videoly_audiodown">A-%1$skbps\u2193</string>
	<string name="ttt_dialog_exitroom_title">Exit the room? </string>
	<string name="ttt_error_enterchannel_timeout">Timeout, 10 seconds without receiving a server return</string>
	<string name="ttt_error_enterchannel_unconnect">Unable to connect to the server</string>
	<string name="ttt_error_exit_server_overload">Server overload</string>
	<string name="ttt_error_network_disconnected">The network connection is disconnected, please check the network</string>
	<string name="ttt_comfirm">Yes</string>
	<string name="ttt_com_channel_prefix">"Room ID: "</string>
	<string name="ttt_splash_enterchannel">Enter</string>
	<string name="hint_channel_name_limit">please enter room id (id\'s number length limit 19)</string>
	<string name="ttt_loading_channel">Entering the room...</string>
	<string name="ttt_dialog_exception_title">Exception</string>
	<string name="ttt_dialog_exception_message">Error Message</string>
	<string name="ttt_cancel">No</string>
	<string name="ttt_error_enterchannel_unknow">进房间发生未知错误</string>
	<string name="ttt_error_exit_kicked">被主播踢出</string>
	<string name="ttt_error_exit_push_rtmp_failed">rtmp推流失败</string>
	<string name="ttt_error_exit_anchor_exited">主播已退出</string>
	<string name="ttt_error_exit_relogin">重复登录</string>
	<string name="ttt_error_exit_noaudio_upload">长时间没有上行音频数据</string>
	<string name="ttt_error_exit_novideo_upload">长时间没有上行视频数据</string>
	<string name="ttt_error_exit_other_anchor_enter">其他人以主播身份进入</string>
	<string name="ttt_error_checkchannel_empty">房间号不能为空</string>
	<string name="ttt_error_checkchannel_owner">房间号不能为本房间</string>
	<string name="ttt_error_checkchannel_format">房间号只能为数字</string>
	<string name="main_title_otheranchor">其他主播:</string>
	<string name="main_btn_linkstart">开始连麦</string>
	<string name="ttt_com_uid_prefix">用户ID:</string>
	<string name="ttt_error_exit_token_expired">token 值已过期</string>
	<string name="ttt_error_enterchannel_format">房间名不符合数字格式</string>
	<string name="ttt_error_enterchannel_token_invaild">token 值无效</string>
	<string name="ttt_error_enterchannel_version">版本错误</string>
	<string name="ttt_error_enterchannel_room_no_exist">该房间不存在</string>
	<string name="ttt_error_enterchannel_verification_failed">服务器验证错误</string>
</resources>