<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 android:layout_width="match_parent"
											 android:layout_height="match_parent"
											 android:background="@drawable/login"
											 android:clipToPadding="true"
											 android:fitsSystemWindows="true">

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="142dp"
		android:layout_height="27dp"
		android:layout_marginTop="75dp"
		android:background="@drawable/logo"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/user_id_text"
		android:layout_width="76dp"
		android:layout_height="33dp"
		android:layout_marginRight="12dp"
		android:gravity="right|center_vertical"
		android:singleLine="true"
		android:text="@string/ttt_com_channel_prefix"
		android:textColor="#FFFFFF"
		android:textSize="15sp"
		app:layout_constraintBottom_toBottomOf="@+id/room_id"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toLeftOf="@+id/room_id"
		app:layout_constraintTop_toTopOf="@+id/room_id"
		app:layout_constraintVertical_bias="0.0"/>

	<EditText
		android:id="@+id/room_id"
		android:layout_width="190dp"
		android:layout_height="33dp"
		android:layout_marginTop="80dp"
		android:background="@drawable/login_edit"
		android:ems="10"
		android:hint="@string/hint_channel_name_limit"
		android:inputType="number"
		android:paddingLeft="12dp"
		android:textColor="#0FFFF1"
		android:textSize="12sp"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintLeft_toRightOf="@+id/user_id_text"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

	<Button
		android:layout_width="278dp"
		android:layout_height="40dp"
		android:layout_marginTop="163dp"
		android:background="@drawable/login_enter"
		android:onClick="onClickEnterButton"
		android:text="@string/ttt_splash_enterchannel"
		android:textColor="#FFFFFF"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/room_id"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="18dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:text="@string/app_name"
		android:textColor="#FFFFFF"
		android:textSize="15sp"
		app:layout_constraintBottom_toTopOf="@+id/version"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>

	<TextView
		android:id="@+id/version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:text="@string/ttt_splash_versioninfo"
		android:textColor="#FFFFFF"
		android:textSize="10sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>
