<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/main_background"
											 xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 xmlns:tools="http://schemas.android.com/tools"
											 android:layout_width="match_parent"
											 android:layout_height="match_parent"
											 android:background="@drawable/bgffffffr5"
											 tools:layout_editor_absoluteY="25dp">

	<ImageView
		android:id="@+id/imageView3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="0dp"
		android:layout_marginStart="0dp"
		android:layout_marginTop="0dp"
		android:background="@drawable/dingbuyinying"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<ImageView
		android:id="@+id/main_btn_camera"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="32dp"
		android:src="@drawable/mainly_btn_camera_selector"
		app:layout_constraintStart_toStartOf="@+id/imageView3"
		app:layout_constraintTop_toTopOf="@+id/imageView3"/>

	<ImageView
		android:id="@+id/main_btn_audio_channel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:src="@drawable/mianti"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/main_btn_camera"/>

	<TextView
		android:id="@+id/local_room_id"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="32dp"
		android:singleLine="true"
		android:textColor="@color/font_com_color_white"
		android:textSize="@dimen/font_com_size_12"
		app:layout_constraintStart_toEndOf="@+id/main_btn_camera"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/local_uid_id"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="32dp"
		android:singleLine="true"
		android:textColor="@color/font_com_color_white"
		android:textSize="@dimen/font_com_size_12"
		app:layout_constraintStart_toEndOf="@+id/main_btn_camera"
		app:layout_constraintTop_toTopOf="@+id/local_room_id"/>

	<TextView
		android:id="@+id/main_btn_audioup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:layout_marginTop="32dp"
		android:singleLine="true"
		android:text="@string/main_audioup"
		android:textColor="@color/font_com_color_white"
		android:textSize="@dimen/font_com_size_12"
		app:layout_constraintEnd_toStartOf="@+id/main_btn_exit"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/main_btn_videoup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:layout_marginTop="16dp"
		android:singleLine="true"
		android:text="@string/main_videoups"
		android:textColor="@color/font_com_color_white"
		android:textSize="@dimen/font_com_size_12"
		app:layout_constraintEnd_toStartOf="@+id/main_btn_exit"
		app:layout_constraintTop_toBottomOf="@+id/main_btn_audioup"/>

	<ImageView
		android:id="@+id/main_btn_exit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_marginEnd="16dp"
		android:layout_marginTop="32dp"
		android:paddingTop="6dp"
		android:src="@drawable/mainly_btn_exit_selector"
		app:layout_constraintEnd_toEndOf="@+id/imageView3"
		app:layout_constraintTop_toTopOf="parent"/>

	<android.support.constraint.ConstraintLayout
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="32dp"
		android:layout_marginStart="32dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/bg99ffffffr5"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/main_btn_audio_channel"
		app:layout_constraintTop_toBottomOf="@+id/main_btn_videoup">

		<TextView
			android:id="@+id/textView4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:text="@string/main_title_otheranchor"
			android:textColor="#1c86ee"
			android:textSize="16sp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<TextView
			android:id="@+id/textView_room_id"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="20dp"
			android:text="@string/ttt_com_channel_prefix"
			android:textColor="#000000"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView4"/>

		<EditText
			android:id="@+id/remote_room_id"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_marginStart="8dp"
			android:background="@drawable/bgffffffr5"
			android:ems="10"
			android:inputType="number"
			android:padding="5dp"
			android:textSize="12sp"
			app:layout_constraintBottom_toBottomOf="@+id/textView_room_id"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/textView_room_id"
			app:layout_constraintTop_toTopOf="@+id/textView_room_id"/>

		<Button
			android:layout_width="80dp"
			android:layout_height="40dp"
			android:layout_marginBottom="16dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="16dp"
			android:background="@drawable/bgffffffr5"
			android:onClick="onLinkButtonClick"
			android:textSize="16sp"
			android:text="@string/main_btn_linkstart"
			android:textColor="@color/main_linkstart_selector"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/remote_room_id"/>
	</android.support.constraint.ConstraintLayout>

	<com.tttrtclink.Helper.RemoteWindow
		android:id="@+id/left_remote_window"
		android:layout_width="0dp"
		android:layout_height="250dp"
		android:visibility="invisible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintWidth_percent="0.5"/>
</android.support.constraint.ConstraintLayout>